Fix footer overlapping server settings tab

--- a/index.css
+++ b/index.css
@@ -1,5 +1,11 @@
-footer>p {
+/* footer>p {
     position: fixed;
     bottom: 2em;
     left: 2em;
 }
+
+footer>select {
+    position: fixed;
+    bottom: 2em;
+    right: 2em;
+} */
